[workspace]
resolver = "2"
members = ["crates/tree_plus_core", "crates/tree_plus_cli"]

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bionicles/tree_plus"

[workspace.dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = { version = "0.8", features = ["preserve_order"] }
serde_yaml = "0.9"
unicode-width = "0.2"
rayon = "1.10"
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
criterion = "0.5"
