[project]
name = "tree_plus"
dynamic = ["version"]
authors = [{ name = "Bion Howard", email = "bion@atomiclogic.com" }]
description = "A `tree` util enhanced with tokens, lines, and components."
readme = "README.md"
requires-python = ">=3.8"
keywords=["tree", "util", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]
dependencies = ["tiktoken", "PyYAML", "click", "rich", "tomli", "natsort>=7.1", "fake_useragent", "bs4"]

[project.optional-dependencies]
dev = ["pytest", "pytest-dotenv", "pytest-xdist"]

[project.urls]
documentation = "https://github.com/bionicles/tree_plus/blob/main/README.md" 
Homepage = "https://github.com/bionicles/tree_plus/blob/main/README.md"
repository = "https://www.github.com/bionicles/tree_plus"
Issues = "https://github.com/bionicles/tree_plus/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
tree_plus = "tree_plus_cli:main"

[tool.setuptools]
py-modules = ["tree_plus_cli"]
packages = ["tree_plus_src"]

[tool.setuptools.dynamic]
version = {attr = "tree_plus_src.version.__version__"}