[package]
name = "tree_plus_core"
description = "Core library for tree_plus: map repositories into trees with components, tokens, and lines"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
unicode-width.workspace = true
rayon.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
rusqlite = { workspace = true, optional = true }
tree-sitter-go.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "tree_plus_bench"
harness = false
